--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'net.kunmc.lab'
-version = '1.0'
+version = '1.1'
 
 sourceCompatibility = '1.11'
 targetCompatibility = '1.11'
@@ -23,11 +23,15 @@ repositories {
     maven {
         url 'https://repo.dmulloy2.net/nexus/repository/public/'
     }
+    maven {
+        url "https://libraries.minecraft.net"
+    }
 }
 
 dependencies {
     compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
+    compile 'com.mojang:brigadier:1.0.18'
 }
 
 processResources {
